# Statistical-Methods-in-Python

./: pyproject.toml
dummy_variables/: Multiple Linear Regression with Dummies Exercise.ipynb
linear_regression/: Real state price.ipynb  Simple Linear Regression Exercise Solution.ipynb  Simple linear regression.ipynb
multiple_linear_regression/: Multiple Linear Regression Exercise.ipynb
tests/: test_statistical_methods.py
