[tool.poetry]
name = "statistical_methods"
version = "0.1.0"
description = "Advanced Statistical Methods in Python"
authors = ["Alvaro Farias <afariasfermin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18.2"
pandas = "^1.0.3"
scipy = "^1.4.1"
statsmodels = "^0.11.1"
matplotlib = "^3.2.1"
seaborn = "^0.10.0"
sklearn = "^0.0"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
